# heros

./: .env  Dockerfile.yml  dataret_spi.py  docker-compose.yml  heros-server.py  hws_ufms_wxt.py  import_wxt.py  justfile  pyproject.toml  spi_to_sql.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/heros/: config.py  logging.py  server.py
backend/heros/api/: credentials.py  download.py  gauges.py  health.py  linigrafos.py  location.py  main.py  metereologico.py
backend/heros/db_access/: __init__.py  credentials.py  gauges.py  linigrafos.py  meterologico.py
backend/heros/outbound_apis/: engtec.py  noaa.py
backend/heros/report/: api.py  db_access.py  lib.py  main.py  period.py  plots.py  template.py
backend/heros/types/: engtec.py  location.py  noaa.py
backend/heros/types/db/: gauges.py  linigrafos.py  location.py  metereologico.py
backend/migrations/: add_api_credentials.sql  create_tables.sql
backend/tests/: test_wxt_api.py
backend/tests/heros/: wxt.py
frontend/: Dockerfile  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: BaciasShapeFile.ts  index.css  main.tsx  routeTree.gen.ts  styles.css  theme.tsx  utils.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: DashboardLayout.tsx
frontend/src/components/common/: Chart.tsx  DashboardLayout.tsx  LayoutBox.tsx  MetStats.tsx  Separator.tsx  Sidebar.tsx  SidebarItems.tsx  Stat.tsx  Stats.tsx  (+1 more)
frontend/src/hooks/: useStation.ts
frontend/src/routes/: __root.tsx  _layout.tsx
heros/: config.py  server.py
heros/api/: linigrafos.py  location.py  main.py  met.py  metereologico.py
heros/db_access/: __init__.py  linigrafos.py  meterologico.py  sql.py
heros/outbound_apis/: engtec.py  noaa.py  spi.py  wxt.py
heros/types/: __init__.py  engtec.py  localizacao.py  noaa.py  sensordata.py  utils.py  wxtdata.py
heros/types/db/: linigrafos.py  metereologico.py
migrations/: create_tables.sql
(+30 files in other folders)
