[project]
name = "heros-server"
version = "0.1.1"
description = "HEROSLAB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.10",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 100
indent-width = 4


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
